--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -71,17 +71,13 @@ function playSound(e){
   key.classList.add("playing");
 };
 
-
-
-
 function removeTransition(e){
-  if(e.propertyName !== "transform") return;
+  if (e.propertyName !== "transform") return;
   this.classList.remove("playing");
 };
 
-const keys = document.querySelectorAll('.key');
+const keys = document.querySelectorAll(".key");
 keys.forEach(key => key.addEventListener("transitionend", removeTransition));
-
 
 window.addEventListener("keydown", playSound);
 
